# clausebot

./: .env.example  .gitignore  .semgrepignore  .trufflehogignore  ACTUAL_FIX_APPLIED.md  API_STATUS_VERIFICATION.md  ARCHITECTURE.md  ARCHIVE_OLD_REPOSITORIES.md  ARCHIVE_OLD_REPOS_IMMEDIATE.md  AUDIT_ANALYSIS_20251030.md  AUDIT_CLEARED_2025-10-26.md  AUDIT_COMMANDS.md  BULLETPROOF_COMPLETE.md  COMMIT_MANIFEST.md  CORS_UPDATE_REQUIRED.txt  CREATE_RAG_FILES.ps1  CRITICAL_FIX_BLANK_PAGE.md  CRITICAL_FIX_GA_CORRECTED.md  DELIVERY_SUMMARY.md  DEPLOYMENT_PACKAGE_SUMMARY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_2025_11_03.md  Dockerfile  ENTERPRISE_ONEPAGER.md  ENTERPRISE_POSITIONING.md  FINAL_DEPLOYMENT_CHECKLIST.md  FINAL_LOCKDOWN_COMPLETE.md  FORMAL_CLOSURE_CHECKLIST.md  FULL_STACK_IMPLEMENTATION_SUMMARY.md  GA4_INTEGRATION_REQUIRED.txt  GITIGNORE_FIX_RECEIPT.md  GOLDEN_Q026_Q041_MANIFEST.md  GOODNIGHT_NOV1_2025.md  GO_TO_MARKET_STRATEGY.md  INFRASTRUCTURE_ALIGNMENT_REPORT.md  LAUNCH_READINESS_PACKAGE.md  LAUNCH_READINESS_STATUS.md  MIGRATION_SUCCESS_REPORT.md  MONITORING_DISCOVERY_RESULTS.md  MONITORING_SETUP.md  (+41 more)
.github/: pull_request_template.md
api/: main.py
backend/: .gitignore  AIRTABLE_HEALTH_ENHANCEMENT.md  AIRTABLE_SCHEMA_VALIDATION.md  CORS_BROWSER_TEST.js  DEPLOYMENT_CHECKLIST.md  Dockerfile  FULL_STACK_DEPLOYMENT_GUIDE.md  PRIMETIME_RITUAL_2025-10-11.md  PRODUCTION_STATUS_20251023.md  RAG_DEPLOYMENT_SUMMARY.md  README.md  SUPERPOWER_TESTING.md  TEAM_RESPONSIBILITIES.md  api_health_badge.tsx  cursor_integration.ps1  render.yaml  requirements.txt
(+436 files in other folders)
